added final code

--- a/hwk4-task1-whitney-map.ipynb
+++ b/hwk4-task1-whitney-map.ipynb
@@ -63,7 +63,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### ===== FINAL CODE ====="
+    "### ===== FINAL CODE =====\n",
+    "##change the directory: i messed up the github cloning,so I am changing\n",
+    "## directory to the baseform \n",
+    "\n",
+    "\n",
+    "from shapely.geometry import box\n",
+    "\n",
+    "\n",
+    "\n",
+    "os.chdir(\"/Users/sujan/HW/eds220-hwk-4/\")\n",
+    "data_path = os.path.join(os.getcwd(), 'data', 'land_cover.tif') #HW/eds220-hwk-4/data/homework4_files/data/land_cover.tif\n",
+    "\n",
+    "##read the land-cover data\n",
+    "lulc =  rioxr.open_rasterio(data_path)\n",
+    "\n",
+    "## reproject data \n",
+    "lulc = lulc.rio.reproject('EPSG:4326')\n",
+    "\n",
+    "# CA shapefile from the link \n",
+    "ca = gpd.read_file(\"https://data.ca.gov/dataset/e212e397-1277-4df3-8c22-40721b095f33/resource/3db1e426-fb51-44f5-82d5-a54d7c6e188b/download/ca-state-boundary.zip\")\n",
+    "\n",
+    "##change the CRS to local system\n",
+    "ca = ca.to_crs(\"4326\")\n",
+    "\n",
+    "#bbox_duplicate = gpd.GeoDataFrame(geometry = lulc)\n",
+    "\n",
+    "\n",
+    "# Get the spatial extent\n",
+    "four_corners = lulc.rio.bounds()\n",
+    "\n",
+    "# Create a bounding box geometry\n",
+    "bbox = box(four_corners[0], four_corners[1], four_corners[2], four_corners[3])\n",
+    "\n",
+    "# Create a GeoDataFrame with the bounding box geometry\n",
+    "bbox = gpd.GeoDataFrame(geometry=[bbox], crs=lulc.rio.crs)\n",
+    "\n",
+    "#points for mt.whitney\n",
+    "points = [[\n",
+    "            -118.50281779614944,\n",
+    "            36.43360285745764\n",
+    "          ],\n",
+    "          [\n",
+    "            -118.28329089019617,\n",
+    "            36.70565730462087\n",
+    "          ],\n",
+    "          [\n",
+    "            -117.95798369376611,\n",
+    "            36.44071397807059\n",
+    "          ],\n",
+    "          [\n",
+    "            -118.50297179600572,\n",
+    "            36.43046331863859\n",
+    "          ]]\n",
+    "\n",
+    "#project the whitney\n",
+    "mt_whitney = gpd.GeoDataFrame(geometry = [Polygon(points)], crs = 'epsg:4326')\n",
+    "\n",
+    "# Plot the geometries from CA\n",
+    "ax = ca.plot(edgecolor='black', facecolor='none')\n",
+    "\n",
+    "# Overlay the bbox boundary on the same plot\n",
+    "bbox.boundary.plot(ax=ax, face='green')\n",
+    "mt_whitney.boundary.plot(ax = ax, color = \"red\")\n",
+    "\n",
+    "# Set plot title and show the plot\n",
+    "plt.title(\"Boundary of bbox over ca\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -338,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b56ced71-c9ef-45e3-b4f8-27361d1fe5e7",
    "metadata": {
     "tags": []
@@ -361,7 +427,7 @@
     "ax = ca.plot(edgecolor='black', facecolor='none')\n",
     "\n",
     "# Overlay the bbox boundary on the same plot\n",
-    "bbox.boundary.plot(ax=ax, facecolor='green')\n",
+    "bbox.boundary.plot(ax=ax, face='green')\n",
     "mt_whitney.boundary.plot(ax = ax, color = \"red\")\n",
     "\n",
     "# Set plot title and show the plot\n",
