fixed the git pull error

--- a/hwk4-task1-whitney-map.ipynb
+++ b/hwk4-task1-whitney-map.ipynb
@@ -246,12 +246,7 @@
     "\n",
     "##Just plot it baby\n",
     "lulc = lulc.rio.reproject('EPSG:4326')\n",
-    "lulc.plot()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "lulc.plot()\n"
    ]
   },
   {
